# botrader

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: backtest.yaml  default.yaml  paper.yaml  testnet.yaml
docs/: expected_value.md
mobile/: .env.example  .eslintrc.json  .gitignore  App.tsx  README.md  app.json  package-lock.json  package.json  tsconfig.json
mobile/src/: navigation.tsx  theme.ts
mobile/src/api/: client.ts  hooks.ts
mobile/src/components/: CredentialsForm.tsx  EquityChart.tsx  KillSwitchBadge.tsx  ModeChip.tsx  ModeSwitcherSheet.tsx  PositionRow.tsx  ScannerRow.tsx  StatPill.tsx  TradeRow.tsx
mobile/src/screens/: ChartScreen.tsx  DashboardScreen.tsx  HistoryScreen.tsx  PositionsScreen.tsx  ScannerScreen.tsx  SettingsScreen.tsx
mobile/src/utils/: format.ts
scripts/: compare_variants.py  run_demo_api.py  shoot.cjs
src/botrader/: __init__.py  cli.py  config.py  logging_setup.py
src/botrader/api/: __init__.py  app.py  auth.py  runtime.py  schemas.py  secrets_store.py  state.py
src/botrader/backtest/: engine.py  metrics.py  report.py
src/botrader/core/: clock.py  events.py  types.py
src/botrader/data/: ohlcv.py  resampler.py
src/botrader/execution/: broker_base.py  ccxt_broker.py  paper_broker.py  sim_broker.py
src/botrader/risk/: killswitch.py  limits.py  sizing.py
src/botrader/runner/: live.py  mode.py
src/botrader/smc/: fvg.py  liquidity.py  order_blocks.py  structure.py  sweeps.py  swings.py
src/botrader/strategy/: base.py  context.py  smc_mtf.py
src/botrader/utils/: funding.py  (+1 more)
tests/: conftest.py
tests/api/: conftest.py  test_endpoints.py  test_mode_toggle.py  test_secrets_store.py
tests/integration/: test_backtest_pipeline.py
tests/unit/: test_dd_sizing.py  test_fvg.py  test_killswitch.py  test_liquidity.py  test_order_blocks.py  test_sim_broker.py  test_sizing.py  test_strategy_filters.py  test_structure.py  test_sweeps.py  test_swings.py
(+7 files in other folders)
