[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "botrader"
version = "0.1.0"
description = "Smart Money Concepts (SMC) day-trading bot for crypto futures markets."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "botrader" }]
dependencies = [
    "ccxt>=4.3.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0.1",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.1",
    "pyarrow>=15.0.0",
    "matplotlib>=3.8.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-PyYAML>=6.0.12",
    "pandas-stubs>=2.2.0.0",
]

[project.scripts]
botrader = "botrader.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "RET", "PL"]
ignore = [
    "PLR0911",  # too many returns — strategy state machines need them
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "PLC0415",  # lazy imports are deliberate for CLI startup speed
    "B008",     # typer.Option / typer.Argument in defaults is idiomatic
    "E741",     # `l` is OK for `low` in OHLCV math
    "UP042",    # str-Enum subclass is fine; we prefer Enum + str values
    "RET504",   # explicit assign-then-return is fine
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101", "E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: slow tests (e.g., e2e)",
    "e2e: end-to-end tests requiring exchange access",
]
addopts = "-q --strict-markers"
